--- a/systemd-services/camera-mjpeg-over-tcp.service
+++ b/systemd-services/camera-mjpeg-over-tcp.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/gst-launch-1.0 libcamerasrc ! video/x-raw, colorimetry=bt709, format=NV12, width=640, height=360, framerate=30/1 ! jpegenc ! multipartmux ! tcpserversink host=0.0.0.0 port=5000
+ExecStart=/usr/bin/gst-launch-1.0 libcamerasrc ! video/x-raw, colorimetry=bt709, format=NV12, width=640, height=360, framerate=30/1 ! jpegenc quality=25 ! multipartmux ! tcpserversink host=0.0.0.0 port=5000
 Restart=on-failure
 RestartSec=10
 
