--- a/supreme-server/Cargo.toml
+++ b/supreme-server/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "velovision-pi-cam"
+name = "supreme-server"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
