--- a/.github/workflows/cross-compile-armv7.yml
+++ b/.github/workflows/cross-compile-armv7.yml
@@ -83,7 +83,7 @@ jobs:
         run: find supreme-server/target
       - name: Compress
         run: |
-          mkdir -p ./artifacts
+          mkdir -p supreme-server/artifacts
           # windows is the only OS using a different convention for executable file name
           if [[ $OS =~ ^windows.*$ ]]; then
               EXEC=$NAME.exe
