--- a/.github/workflows/cross-compile-armv7.yml
+++ b/.github/workflows/cross-compile-armv7.yml
@@ -44,7 +44,7 @@ jobs:
     needs: test
     runs-on: ${{ matrix.OS }}
     env:
-      NAME: rust-cross-compile-example # change with the name of your project
+      NAME: supreme-server # change with the name of your project
       TARGET: ${{ matrix.TARGET }}
       OS: ${{ matrix.OS }}
     steps:
