--- a/.github/workflows/cross-compile-armv7.yml
+++ b/.github/workflows/cross-compile-armv7.yml
@@ -110,6 +110,7 @@ jobs:
 
   # deploys to github releases on tag
   deploy:
+    permissions: write-all
     if: startsWith(github.ref, 'refs/tags/')
     needs: build
     runs-on: ubuntu-latest
