--- a/.github/workflows/cross-compile-armv7.yml
+++ b/.github/workflows/cross-compile-armv7.yml
@@ -2,7 +2,12 @@ name: Rust
 
 on:
   push:
+    paths-ignore:
+      - '**.md'
   pull_request:
+    paths-ignore:
+      - '**.md'
+
 
 env:
   CARGO_TERM_COLOR: always
