--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,11 @@ build = "build.rs"
 
 [dependencies]
 rppal = "0.14.1"
+serde = "1.0.188"
+serde_derive = "1.0.188"
+serde_json = "1.0.105"
 system_shutdown = "4.0.1"
 systemctl = "0.3.0"
 tiny_http = "0.12.0"
+
+[build-dependencies]
